# Rodavarion_TDriver

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CHANGELOG_BETA8_3.md  CHANGELOG_RC1.md  CHANGELOG_RC1_1.md  CHANGELOG_RC1_2.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP_UA.md  LICENSE  PATCH_NOTES_RUNTIME_CRITICAL_FIXES.md  README.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.1.md  RELEASE_NOTES_1.1.5.md  RELEASE_NOTES_1.1.6.md  REPOSITORY_CLEANUP_AUDIT_1.1.5.md  ROADMAP.md  SUPPORT.md  install.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: linux-build.yml  release.yml
config/: default.json  dependencies.arch.json
docs/: ARCHITECTURE.md  ARCHITECTURE_1_0_ALPHA.md  DEPENDENCIES.md  DEPENDENCY_LIFECYCLE.md  EDITIONS.md  KWIN_CONTEXT_BRIDGE.md  PERSISTENCE.md  PUBLIC_RELEASE_CHECKLIST_UA.md  RELEASE_CHECKS_BETA8.md  RELEASE_CHECKS_STABLE.md  SECURITY.md  WIKI_HOME.md
include/rodavarion/action/: MouseAction.hpp  MouseMappingStore.hpp
include/rodavarion/capability/: DeviceCapability.hpp  DeviceCapabilityClassifier.hpp
include/rodavarion/catalog/: VendorDatabase.hpp
include/rodavarion/config/: ConfigService.hpp
include/rodavarion/context/: ApplicationContext.hpp  ContextBridge.hpp
include/rodavarion/core/: Application.hpp  Logger.hpp  Result.hpp
include/rodavarion/device/: Device.hpp  DeviceManager.hpp  DeviceProvider.hpp  PeripheralDescriptor.hpp  PhysicalDevice.hpp  PhysicalDeviceGrouper.hpp
include/rodavarion/event/: EventBus.hpp
include/rodavarion/gui/: DependencySetupDialog.hpp  MainWindow.hpp  MouseActionDialog.hpp
include/rodavarion/hid/: HidDeviceProvider.hpp
include/rodavarion/i18n/: LocalizationService.hpp
include/rodavarion/input/: EvdevMouseMonitor.hpp  InputEvent.hpp  MouseEventNormalizer.hpp
include/rodavarion/mock/: MockDeviceProvider.hpp
include/rodavarion/plugin/: Plugin.hpp  PluginRegistry.hpp
include/rodavarion/profile/: Profile.hpp  ProfileManager.hpp  ProfileStore.hpp
include/rodavarion/runtime/: ActionEngine.hpp  DesktopActionExecutor.hpp  DesktopOutputEngine.hpp  IOutputEngine.hpp  MouseRuntimeController.hpp
include/rodavarion/safety/: ActionSafetyPolicy.hpp
include/rodavarion/setup/: DependencyMaintenanceManager.hpp  DependencySetupManager.hpp
include/rodavarion/system/: LinuxDiagnostics.hpp
include/rodavarion/transport/: TransportClassifier.hpp  TransportType.hpp
packaging/applications/: rodavarion-tdriver-uninstall.desktop  rodavarion-tdriver.desktop
packaging/autostart/: rodavarion-tdriver.desktop
packaging/desktop-directories/: rodavarion-tdriver.directory
packaging/kwin/rodavarion-context/: metadata.json
packaging/kwin/rodavarion-context/contents/code/: main.js
packaging/menus/: rodavarion-tdriver.menu
packaging/systemd/user/: rodavarion-tdriverd.service
packaging/udev/: 70-rodavarion-input.rules  70-rodavarion-logitech-input-monitor.rules
src/action/: MouseAction.cpp  MouseMappingStore.cpp
src/app/: main.cpp
src/capability/: DeviceCapabilityClassifier.cpp
src/catalog/: VendorDatabase.cpp
src/cli/: main.cpp
src/config/: ConfigService.cpp
src/context/: ApplicationContext.cpp  ContextBridge.cpp
src/core/: Application.cpp  Logger.cpp
src/daemon/: main.cpp
src/device/: DeviceManager.cpp  PeripheralDescriptor.cpp  PhysicalDeviceGrouper.cpp
src/event/: EventBus.cpp
src/gui/: DependencySetupDialog.cpp  MainWindow.cpp  MouseActionDialog.cpp
src/hid/: HidDeviceProvider.cpp
src/i18n/: LocalizationService.cpp
src/input/: EvdevMouseMonitor.cpp  MouseEventNormalizer.cpp
src/mock/: MockDeviceProvider.cpp
src/plugin/: PluginRegistry.cpp
src/profile/: ProfileManager.cpp  ProfileStore.cpp
src/runtime/: ActionEngine.cpp  DesktopActionExecutor.cpp  DesktopOutputEngine.cpp  MouseRuntimeController.cpp
src/safety/: ActionSafetyPolicy.cpp
src/setup/: DependencyMaintenanceManager.cpp  DependencySetupManager.cpp
src/system/: LinuxDiagnostics.cpp
src/transport/: TransportClassifier.cpp
tests/: test_main.cpp
tools/: bootstrap_arch.sh  build_arch.sh  clean.sh  cleanup_install_dependencies.sh  install_feature_arch.sh  install_udev_rules.sh  install_user.sh  preflight_arch.sh  remove_gui_keep_service.sh  run_arch.sh  uninstall_all_user.sh  uninstall_system.sh
